# tapescript

./: .gitignore  changelog.md  docs.md  language_spec.md  license  pyproject.toml  readme.md  requirements.txt  script_examples.md  security.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  release_checklist.md  task.md
tapescript/: AMHL.py  __init__.py  classes.py  errors.py  functions.py  interfaces.py  notes.md  parsing.py  tools.py  version.py
tests/: context.py  debug.py  test_classes.py  test_e2e_eltoo.py  test_e2e_extensions.py  test_e2e_sigext.py  test_functions.py  test_parsing.py  test_security.py  test_tools.py  utxos.py
tests/vectors/: 1.hex  1.src  2.hex  2.src  2_decompiled.src  3.hex  3.src  3_decompiled.src  4.hex  4.src  4_decompiled.src  5.hex  5.src  5_decompiled.src  6.hex  6.src  6_decompiled.src  branching_e2e.hex  branching_e2e.src  branching_e2e_decompiled.src  cds_committed_script.hex  cds_committed_script.src  cds_committed_script_decompiled.src  cds_locking_script.hex  cds_locking_script.src  cds_locking_script_decompiled.src  cds_unlocking_script1.hex  cds_unlocking_script1.src  cds_unlocking_script1_decompiled.src  cds_unlocking_script2.hex  cds_unlocking_script2.src  cds_unlocking_script2_decompiled.src  cds_unlocking_script3.hex  cds_unlocking_script3.src  cds_unlocking_script3_decompiled.src  comptime.hex  comptime.src  comptime_decompiled.src  correspondent_committed_script.hex  correspondent_committed_script.src  (+69 more)
