[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapescript"
version = "0.2.0"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "Scripting system for use in distributed systems"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
  "Programming Language :: Other Scripting Engines"
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/tapescript"
"Bug Tracker" = "https://github.com/k98kurz/tapescript/issues"